<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ccc"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <!-- Text Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/interests_input"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="53dp"
            android:background="@android:color/transparent"
            android:popupBackground="@android:color/holo_blue_light"
            android:prompt="@string/spinner_title" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/next"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/feedback"
        app:srcCompat="@drawable/feedback" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/feedback_here"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/textView4"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/_24_hours_live_radio"
        app:srcCompat="@drawable/radio" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageButton4"
        android:layout_below="@+id/button"
        android:fontFamily="serif"
        android:text="@string/_24_hours_live_radio"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>
